--- a/app/views/alunos/show.html.erb
+++ b/app/views/alunos/show.html.erb
@@ -1,4 +1,5 @@
 <div style="width:100%">
+<table style="width:100%">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -52,5 +53,8 @@
 </p>
 
 <%= link_to 'Edit', edit_aluno_path(@aluno) %> |
+
+</table>
 <%= link_to 'Back', alunos_path %>
+
 </div>
