--- a/app/views/aeronaves/show.html.erb
+++ b/app/views/aeronaves/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<table style="width:100%">
 <p>
   <strong>Nome:</strong>
   <%= @aeronafe.nome %>
@@ -36,4 +36,5 @@
 </p>
 
 <%= link_to 'Edit', edit_aeronafe_path(@aeronafe) %> |
+</table>
 <%= link_to 'Back', aeronaves_path %>
