--- a/app/assets/stylesheets/alunos.scss
+++ b/app/assets/stylesheets/alunos.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Alunos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+
+table, th, td {
+    border: 1px solid black;
+}
