--- a/app/views/aeronaves/index.html.erb
+++ b/app/views/aeronaves/index.html.erb
@@ -4,7 +4,7 @@
 
 <h1>Listing Aeronaves</h1>
 
-<table style="width:100%">
+<table class="table table-hover" style="width:100%">
   <thead>
     <tr>
       <th>Nome</th>
