--- a/app/views/alunos/index.html.erb
+++ b/app/views/alunos/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Alunos</h1>
 
-<table style="width:100%">
+<table class="table table-hover" style="width:100%">
   <thead>
     <tr>
       <th>Nome</th>
