--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
   <h1>Bem vindos!</h1>
   <p>Conheça nosso sistema de cadastro de alunos e aeronaves, clique abaixo para se acessar!</p>
-  <p><a class="btn btn-primary btn-lg" href="/models/sign_in" role="button">Entrar</a></p>
+  <p><a class="btn btn-primary btn-lg" href="/models/sign_in" role="button" color="white">Entrar</a></p>
 </div>
