--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/pages/home"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span>App</a>
+      <a class="navbar-brand" href="/pages/home">Cadastro Aerolunos</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
