--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,47 @@
-<div class="jumbotron">
+<br><br><div class="jumbotron">
   <h1>Bem vindos!</h1>
   <p>Conheça nosso sistema de cadastro de alunos e aeronaves, clique abaixo para se acessar!</p>
   <p><a class="btn btn-success btn-lg" href="/models/sign_in" role="button">Entrar</a></p>
+</div>
+
+<br>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="https://media.defense.gov/2003/May/29/2000599135/-1/-1/0/030529-F-0000C-002.JPG" alt="...">
+      <div class="carousel-caption">
+        Cadastro de alunos
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://enter-guide.com/portodegalinhas/es/wp-content/uploads/2012/07/voosbaratosbrasil.jpg" alt="...">
+      <div class="carousel-caption">
+        Cadastro de aeronaves
+      </div>
+    </div>
+    <div class="item">
+      <img src="..." alt="http://www.blogdoadonis.com.br/wp-content/uploads/2015/06/ginasta2.jpg">
+      <div class="carousel-caption">
+        Administre tudo
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Anterior</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Próximo</span>
+  </a>
 </div>
