--- a/app/views/alunos/index.html.erb
+++ b/app/views/alunos/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Alunos</h1>
+<h1>Lista de Alunos</h1>
 
 <table class="table table-hover" style="width:100%">
   <thead>
